# UniGate

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  plan.md  vite.config.ts
.github/workflows/: build-installers.yml
awg-shim/: go.mod  go.sum  main.go  socks5.go
scripts/: awg-quick-bash3.patch  build-awg-shim.ps1  fetch-awg-macos.sh  fetch-singbox.ps1  fetch-singbox.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  connection.rs  elevation.rs  export.rs  import.rs  lib.rs  main.rs  models.rs  profiles.rs  settings.rs  stats.rs  storage.rs  subscriptions.rs  sysproxy.rs
src/components/: TitleBar.tsx
src/features/connection/: ConnectionPanel.tsx
src/features/profiles/: ImportDialog.tsx  ProfileForm.tsx  ProfilesPanel.tsx
src/features/routing/: RoutingPanel.tsx
src/features/settings/: SettingsPanel.tsx
src/features/subscriptions/: SubscriptionsPanel.tsx
src/lib/: format.ts  ipc.ts  platform.ts  types.ts
src/store/: useAppStore.ts
