[package]
name = "unigate"
version = "0.0.3"
description = "UniGate — unified VPN/proxy/tunnel client"
authors = ["UniGate contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "unigate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
url = "2"
percent-encoding = "2"
base64 = "0.22"
flate2 = "1"
# http (localhost Clash API) + https (подписки) через rustls (без OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
tokio = { version = "1", features = ["time"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Networking_WinInet",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

